Added functionality to AuthInterceptor to make mapping email to patient id more dynamic

--- a/hapi-fhir-ui/src/app/app.component.html
+++ b/hapi-fhir-ui/src/app/app.component.html
@@ -313,6 +313,11 @@
     </svg>
   </a>
 </div>
+<div>
+  <button  (click)="login()">Login</button>
+  <button (click)="logout()">Logout</button>
+</div>
+<router-outlet></router-outlet>
 
 <div class="content" role="main">
 
